// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthContext component snapshots > matches snapshot for the primary wallet list 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/40 z-40 backdrop-blur-sm transition-opacity"
  />
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="fixed z-40 bottom-0 left-0 right-0 lg:bottom-auto lg:left-1/2 lg:top-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-md bg-white shadow-2xl rounded-t-2xl lg:rounded-2xl flex flex-col max-h-[90vh] overflow-hidden animate-slide-up lg:animate-none lg:zoom-in"
    role="dialog"
  >
    <div
      class="lg:hidden w-10 h-1 bg-border rounded-full mx-auto my-3"
    />
    <div
      class="flex-1 overflow-y-auto w-full"
    >
      <div
        class="px-6 pt-2 pb-4 flex justify-between items-center relative border-b border-border/50"
      >
        <div
          data-testid="logo"
        />
        <button
          aria-label="Close modal"
          class="text-t-muted hover:text-t-primary transition-colors disabled:opacity-50"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-6"
      >
        <h2
          class="text-xl font-bold text-t-primary mb-2"
          id="modal-title"
        >
          Connect your wallet
        </h2>
        <p
          class="text-sm text-t-muted mb-6"
        >
          Choose how you'd like to connect to Tradazone.
        </p>
        <div
          class="mb-6 space-y-4"
        >
          <div
            class="relative"
          >
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-50 border border-border rounded-xl text-sm focus:ring-2 focus:ring-brand/20 focus:border-brand outline-none transition-all"
              placeholder="Search wallets..."
              type="text"
              value=""
            />
            <div
              class="absolute left-3 top-2.5 text-t-muted"
            >
              <svg
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <path
                  d="m21 21-4.3-4.3"
                />
              </svg>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-brand text-white shadow-md shadow-brand/20"
            >
              all
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              stellar
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              starknet
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              evm
            </button>
          </div>
        </div>
        <div
          data-testid="wallet-list-container"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M29.5 5.5L20.5 13L24 19L29.5 24L31 16L29.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M2.5 5.5L11.5 13L8 19L2.5 24L1 16L2.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M24 19L20.5 13L16 2L11.5 13L8 19L16 22.5L24 19Z"
                      fill="#E4761B"
                    />
                    <path
                      d="M24 19L16 22.5L16 30L21.5 28.5L29.5 24L24 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M8 19L16 22.5L16 30L10.5 28.5L2.5 24L8 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M16 22.5L21.5 28.5L16 30L10.5 28.5L16 22.5Z"
                      fill="#F6851B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    MetaMask 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    EVM Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-[#FF875B]/10"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M10 2L4 18h4.5L10 13l1.5 5H16L10 2z"
                      fill="#FF875B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Argent 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Starknet Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-blue-50"
                >
                  <svg
                    fill="none"
                    height="22"
                    viewBox="0 0 24 24"
                    width="22"
                  >
                    <path
                      d="M12 2L14.4 9.6H22.4L16 14.1L18.4 21.7L12 17.2L5.6 21.7L8 14.1L1.6 9.6H9.6L12 2Z"
                      fill="#3B82F6"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    LOBSTR 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Stellar Network
                  </div>
                </div>
              </div>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M16 4C9.37 4 4 9.37 4 16C4 22.63 9.37 28 16 28C22.63 28 28 22.63 28 16C28 9.37 22.63 4 16 4ZM19.5 16C18.12 16 17 14.88 17 13.5C17 12.12 18.12 11 19.5 11C20.88 11 22 12.12 22 13.5C22 14.88 20.88 16 19.5 16ZM12.5 16C11.12 16 10 14.88 10 13.5C10 12.12 11.12 11 12.5 11C13.88 11 15 12.12 15 13.5C15 14.88 13.88 16 12.5 16Z"
                      fill="#AB9FF2"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Phantom 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Solana / EVM
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <button
          class="w-full mt-2 text-center text-sm font-semibold text-t-secondary hover:text-brand transition-colors p-3 rounded-lg border border-transparent hover:border-border hover:bg-gray-50 disabled:opacity-50"
        >
          View more options
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthContext component snapshots > matches snapshot for the secondary wallet list view 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/40 z-40 backdrop-blur-sm transition-opacity"
  />
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="fixed z-40 bottom-0 left-0 right-0 lg:bottom-auto lg:left-1/2 lg:top-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-md bg-white shadow-2xl rounded-t-2xl lg:rounded-2xl flex flex-col max-h-[90vh] overflow-hidden animate-slide-up lg:animate-none lg:zoom-in"
    role="dialog"
  >
    <div
      class="lg:hidden w-10 h-1 bg-border rounded-full mx-auto my-3"
    />
    <div
      class="flex-1 overflow-y-auto w-full"
    >
      <div
        class="px-6 pt-2 pb-4 flex justify-between items-center relative border-b border-border/50"
      >
        <button
          class="flex items-center gap-1.5 text-sm font-semibold text-t-primary hover:text-brand transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
           Back
        </button>
        <button
          aria-label="Close modal"
          class="text-t-muted hover:text-t-primary transition-colors disabled:opacity-50"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-6"
      >
        <h2
          class="text-xl font-bold text-t-primary mb-2"
          id="modal-title"
        >
          Connect your wallet
        </h2>
        <p
          class="text-sm text-t-muted mb-6"
        >
          Choose how you'd like to connect to Tradazone.
        </p>
        <div
          class="mb-6 space-y-4"
        >
          <div
            class="relative"
          >
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-50 border border-border rounded-xl text-sm focus:ring-2 focus:ring-brand/20 focus:border-brand outline-none transition-all"
              placeholder="Search wallets..."
              type="text"
              value=""
            />
            <div
              class="absolute left-3 top-2.5 text-t-muted"
            >
              <svg
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <path
                  d="m21 21-4.3-4.3"
                />
              </svg>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-brand text-white shadow-md shadow-brand/20"
            >
              all
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              stellar
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              starknet
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              evm
            </button>
          </div>
        </div>
        <div
          data-testid="wallet-list-container"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-[#FF875B]/10"
                >
                  <svg
                    fill="none"
                    height="20"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="20"
                  >
                    <path
                      d="M21 12V7H5a2 2 0 0 1 0-4h14v4"
                    />
                    <path
                      d="M3 5v14a2 2 0 0 0 2 2h16v-5"
                    />
                    <path
                      d="M18 12a2 2 0 0 0 0 4h4v-4Z"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Other Starknet Wallets 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Braavos, etc.
                  </div>
                </div>
              </div>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="20"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="20"
                  >
                    <path
                      d="M21 12V7H5a2 2 0 0 1 0-4h14v4"
                    />
                    <path
                      d="M3 5v14a2 2 0 0 0 2 2h16v-5"
                    />
                    <path
                      d="M18 12a2 2 0 0 0 0 4h4v-4Z"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    EVM / Browser Wallets 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Any injected Web3 provider
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthContext component snapshots > matches snapshot when a wallet install error is shown 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/40 z-40 backdrop-blur-sm transition-opacity"
  />
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="fixed z-40 bottom-0 left-0 right-0 lg:bottom-auto lg:left-1/2 lg:top-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-md bg-white shadow-2xl rounded-t-2xl lg:rounded-2xl flex flex-col max-h-[90vh] overflow-hidden animate-slide-up lg:animate-none lg:zoom-in"
    role="dialog"
  >
    <div
      class="lg:hidden w-10 h-1 bg-border rounded-full mx-auto my-3"
    />
    <div
      class="flex-1 overflow-y-auto w-full"
    >
      <div
        class="px-6 pt-2 pb-4 flex justify-between items-center relative border-b border-border/50"
      >
        <div
          data-testid="logo"
        />
        <button
          aria-label="Close modal"
          class="text-t-muted hover:text-t-primary transition-colors disabled:opacity-50"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-6"
      >
        <h2
          class="text-xl font-bold text-t-primary mb-2"
          id="modal-title"
        >
          Connect your wallet
        </h2>
        <p
          class="text-sm text-t-muted mb-6"
        >
          Choose how you'd like to connect to Tradazone.
        </p>
        <div
          class="mb-6 space-y-4"
        >
          <div
            class="relative"
          >
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-50 border border-border rounded-xl text-sm focus:ring-2 focus:ring-brand/20 focus:border-brand outline-none transition-all"
              placeholder="Search wallets..."
              type="text"
              value=""
            />
            <div
              class="absolute left-3 top-2.5 text-t-muted"
            >
              <svg
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <path
                  d="m21 21-4.3-4.3"
                />
              </svg>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-brand text-white shadow-md shadow-brand/20"
            >
              all
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              stellar
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              starknet
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              evm
            </button>
          </div>
        </div>
        <div
          data-testid="wallet-list-container"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M29.5 5.5L20.5 13L24 19L29.5 24L31 16L29.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M2.5 5.5L11.5 13L8 19L2.5 24L1 16L2.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M24 19L20.5 13L16 2L11.5 13L8 19L16 22.5L24 19Z"
                      fill="#E4761B"
                    />
                    <path
                      d="M24 19L16 22.5L16 30L21.5 28.5L29.5 24L24 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M8 19L16 22.5L16 30L10.5 28.5L2.5 24L8 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M16 22.5L21.5 28.5L16 30L10.5 28.5L16 22.5Z"
                      fill="#F6851B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    MetaMask 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    EVM Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-[#FF875B]/10"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M10 2L4 18h4.5L10 13l1.5 5H16L10 2z"
                      fill="#FF875B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Argent 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Starknet Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-blue-50"
                >
                  <svg
                    fill="none"
                    height="22"
                    viewBox="0 0 24 24"
                    width="22"
                  >
                    <path
                      d="M12 2L14.4 9.6H22.4L16 14.1L18.4 21.7L12 17.2L5.6 21.7L8 14.1L1.6 9.6H9.6L12 2Z"
                      fill="#3B82F6"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    LOBSTR 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Stellar Network
                  </div>
                </div>
              </div>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M16 4C9.37 4 4 9.37 4 16C4 22.63 9.37 28 16 28C22.63 28 28 22.63 28 16C28 9.37 22.63 4 16 4ZM19.5 16C18.12 16 17 14.88 17 13.5C17 12.12 18.12 11 19.5 11C20.88 11 22 12.12 22 13.5C22 14.88 20.88 16 19.5 16ZM12.5 16C11.12 16 10 14.88 10 13.5C10 12.12 11.12 11 12.5 11C13.88 11 15 12.12 15 13.5C15 14.88 13.88 16 12.5 16Z"
                      fill="#AB9FF2"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Phantom 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Solana / EVM
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <button
          class="w-full mt-2 text-center text-sm font-semibold text-t-secondary hover:text-brand transition-colors p-3 rounded-lg border border-transparent hover:border-border hover:bg-gray-50 disabled:opacity-50"
        >
          View more options
        </button>
        <div
          class="mt-4 p-3 bg-red-50 border border-red-100 rounded-lg flex items-start gap-2 text-sm text-red-800 animate-fade-in"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert flex-shrink-0 mt-0.5 text-red-500"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <div>
            <p
              class="font-medium"
            >
              EVM wallet not detected in browser.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthContext component snapshots > matches snapshot when a wallet session is already connected 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-black/40 z-40 backdrop-blur-sm transition-opacity"
  />
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="fixed z-40 bottom-0 left-0 right-0 lg:bottom-auto lg:left-1/2 lg:top-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-md bg-white shadow-2xl rounded-t-2xl lg:rounded-2xl flex flex-col max-h-[90vh] overflow-hidden animate-slide-up lg:animate-none lg:zoom-in"
    role="dialog"
  >
    <div
      class="lg:hidden w-10 h-1 bg-border rounded-full mx-auto my-3"
    />
    <div
      class="flex-1 overflow-y-auto w-full"
    >
      <div
        class="px-6 pt-2 pb-4 flex justify-between items-center relative border-b border-border/50"
      >
        <div
          data-testid="logo"
        />
        <button
          aria-label="Close modal"
          class="text-t-muted hover:text-t-primary transition-colors disabled:opacity-50"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-6"
      >
        <h2
          class="text-xl font-bold text-t-primary mb-2"
          id="modal-title"
        >
          Connect your wallet
        </h2>
        <p
          class="text-sm text-t-muted mb-6"
        >
          Choose how you'd like to connect to Tradazone.
        </p>
        <div
          class="mb-6 space-y-4"
        >
          <div
            class="relative"
          >
            <input
              class="w-full pl-10 pr-4 py-2 bg-gray-50 border border-border rounded-xl text-sm focus:ring-2 focus:ring-brand/20 focus:border-brand outline-none transition-all"
              placeholder="Search wallets..."
              type="text"
              value=""
            />
            <div
              class="absolute left-3 top-2.5 text-t-muted"
            >
              <svg
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <path
                  d="m21 21-4.3-4.3"
                />
              </svg>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2"
          >
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-brand text-white shadow-md shadow-brand/20"
            >
              all
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              stellar
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              starknet
            </button>
            <button
              class="px-3 py-1 rounded-full text-xs font-semibold capitalize transition-all bg-gray-100 text-t-muted hover:bg-gray-200"
            >
              evm
            </button>
          </div>
        </div>
        <div
          data-testid="wallet-list-container"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M29.5 5.5L20.5 13L24 19L29.5 24L31 16L29.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M2.5 5.5L11.5 13L8 19L2.5 24L1 16L2.5 5.5Z"
                      fill="#E2761B"
                    />
                    <path
                      d="M24 19L20.5 13L16 2L11.5 13L8 19L16 22.5L24 19Z"
                      fill="#E4761B"
                    />
                    <path
                      d="M24 19L16 22.5L16 30L21.5 28.5L29.5 24L24 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M8 19L16 22.5L16 30L10.5 28.5L2.5 24L8 19Z"
                      fill="#D7C1B3"
                    />
                    <path
                      d="M16 22.5L21.5 28.5L16 30L10.5 28.5L16 22.5Z"
                      fill="#F6851B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    MetaMask 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    EVM Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-[#FF875B]/10"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M10 2L4 18h4.5L10 13l1.5 5H16L10 2z"
                      fill="#FF875B"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Argent 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Starknet Network
                  </div>
                </div>
              </div>
              <span
                class="text-[10px] uppercase font-bold tracking-wide text-green-600 bg-green-50 px-2 py-1 rounded-md"
              >
                Installed
              </span>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-blue-50"
                >
                  <svg
                    fill="none"
                    height="22"
                    viewBox="0 0 24 24"
                    width="22"
                  >
                    <path
                      d="M12 2L14.4 9.6H22.4L16 14.1L18.4 21.7L12 17.2L5.6 21.7L8 14.1L1.6 9.6H9.6L12 2Z"
                      fill="#3B82F6"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    LOBSTR 
                    <span
                      class="text-[10px] uppercase font-bold tracking-wide bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full"
                    >
                      Recommended
                    </span>
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Stellar Network
                  </div>
                </div>
              </div>
            </button>
            <button
              class="w-full text-left p-4 rounded-xl border flex items-center justify-between transition-all outline-none border-border hover:border-brand/30 hover:bg-brand/5"
            >
              <div
                class="flex items-center gap-4"
              >
                <div
                  class="w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 bg-gray-100"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 32 32"
                    width="24"
                  >
                    <path
                      d="M16 4C9.37 4 4 9.37 4 16C4 22.63 9.37 28 16 28C22.63 28 28 22.63 28 16C28 9.37 22.63 4 16 4ZM19.5 16C18.12 16 17 14.88 17 13.5C17 12.12 18.12 11 19.5 11C20.88 11 22 12.12 22 13.5C22 14.88 20.88 16 19.5 16ZM12.5 16C11.12 16 10 14.88 10 13.5C10 12.12 11.12 11 12.5 11C13.88 11 15 12.12 15 13.5C15 14.88 13.88 16 12.5 16Z"
                      fill="#AB9FF2"
                    />
                  </svg>
                </div>
                <div>
                  <div
                    class="font-semibold text-t-primary flex items-center gap-2"
                  >
                    Phantom 
                  </div>
                  <div
                    class="text-xs text-t-muted"
                  >
                    Solana / EVM
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <button
          class="w-full mt-2 text-center text-sm font-semibold text-t-secondary hover:text-brand transition-colors p-3 rounded-lg border border-transparent hover:border-border hover:bg-gray-50 disabled:opacity-50"
        >
          View more options
        </button>
        <button
          class="mt-5 w-full text-center text-sm font-semibold text-red-500 hover:text-red-700 transition-colors p-3 rounded-lg border border-transparent hover:border-red-100 hover:bg-red-50 disabled:opacity-50"
        >
          Disconnect all wallets
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
